// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile Snapshot can move matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="true"
  style="--color: #f64c72;"
  title="ant"
>
  <span>
    ant
  </span>
</div>
`;

exports[`Tile Snapshot no moves matches current snapshot 1`] = `
<div
  class="hex tile"
  draggable="false"
  style="--color: #85dcbc;"
  title="fly"
>
  <span>
    fly
  </span>
</div>
`;
